--- a/template_for_flowchart.tex
+++ b/template_for_flowchart.tex
@@ -1,6 +1,7 @@
 \documentclass[tikz,border=10pt]{standalone}
 
 \usepackage[skins]{tcolorbox}
+\usepackage{grffile}
 \usetikzlibrary{shapes.symbols}
 \usetikzlibrary{positioning}
 \usetikzlibrary {arrows.meta} 
